# aegis

./: .gitignore  .gitmodules  CLAUDE.md  index.yaml  project-index.yaml  rcabench-0.1.0.tgz  rcabench-0.2.0.tgz  rcabench-0.2.1.tgz  rcabench-0.2.2.tgz  rcabench-0.2.3.tgz  rcabench-0.2.5.tgz  rcabench-0.2.6.tgz  rcabench-0.2.9.tgz  skaffold.yaml  todo.md  workspace.yaml
.codex/skills/: injection
.github/: dependabot.yml
.github/workbuddy/: config.yaml
.github/workflows/: _publish-ts-sdk.yml  aegisctl-schema-diff.yml  aegislab-manifest-lint.yml  aegislab-swagger-freshness.yml  cascade-submodules.yml  ci-rcabench-platform.yml  images-build.yml  publish-npm.yml  publish-pypi.yml  regression-test.yml  release-aegisctl.yml  release-docker.yml  release-helm.yml
AegisLab/: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile.dev  README.md  config.dev.toml  devbox.json  docker-compose.microservices.yaml  docker-compose.yaml  justfile  lefthook.yml  project-index.yaml  skaffold.yaml
AegisLab-frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  .npmrc  .pnpmfile.cjs  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  cliff.toml  commitlint.config.js  devbox.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  plan.md  pnpm-lock.yaml  project-index.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  workspace.md
AegisLab-frontend/docs/: API_FIELD_MAPPING.md  MIGRATION_GUIDE.md  README.zh-CN.md  frontend-design.md  refactoring-plan.md
AegisLab-frontend/helm/: values.yaml
AegisLab-frontend/src/: App.css  App.tsx  index.css  main.tsx
AegisLab/.github/: copilot-instructions.md
AegisLab/docs/: aegisctl-cli-contract.md  aegisctl-cli-spec.md  frontend-redesign.md  frontend-ui-guidelines.md  inject-pipeline-design.md  report-index.md  sso-extraction-decisions.md  sso-extraction-design.md  todo.md
AegisLab/helm/: Chart.yaml  README.md  values-multi-env.example.yaml  values.yaml
AegisLab/images/: LEGACY.md
AegisLab/manifests/: AUTHENTICATION.md  README.md
AegisLab/regression/: README.md  VALIDATION.md  hotelreservation-guided.yaml  mediamicroservices-guided.yaml  otel-demo-guided.yaml  socialnetwork-guided.yaml  sockshop-guided.yaml  sso_smoke.py  teastore-guided.yaml
AegisLab/scripts/: clean-k8s-data.sh  generate_http_modules.py  publish.sh  reconcile-ns-count.sh  start.sh  test-push.sh  test-regression.sh
AegisLab/scripts/command/: pyproject.toml  settings.toml
AegisLab/scripts/command/src/: pedestal.py  port_manager.py  rcabench_.py  test.py
AegisLab/scripts/command/src/backup/: mysql.py  redis_.py
AegisLab/scripts/command/src/cli/: chaos.py  git.py  pedestal.py  rcabench_.py  sdk.py  swagger.py
AegisLab/scripts/command/src/common/: common.py  docker_manager.py  minikube_cli.py
AegisLab/scripts/command/src/formatter/: common.py  go.py  python.py
AegisLab/scripts/command/src/git/: hook.py
AegisLab/scripts/command/src/swagger/: apifox.py  golang.py  typescript.py
AegisLab/scripts/command/test/: conftest.py  sse_connection.py  test_workflow.json  test_workflow.py
AegisLab/scripts/hack/patch_dataset/: pyproject.toml
AegisLab/src/: Dockerfile  Dockerfile.e2e  config.dev.toml  entrypoint.sh  go.mod  go.sum  main.go
aegislab/: .env.example  .gitignore  .gitmodules  .golangci.yml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Caddyfile.dev  README.md  config.dev.toml  docker-compose.microservices.yaml  justfile  project-index.yaml
aegislab/docs/: README.md  aegis-chaos-design.md  aegisctl-blob.md  aegisctl-page.md  aegisctl-share.md  aegisctl-tls.md  dev-intercept.md  edge-proxy-host-aliasing.md  pages-api.md
aegislab/helm/: Chart.yaml  README.md  values-multi-env.example.yaml  values.yaml
aegislab/manifests/: AUTHENTICATION.md  README.md
aegislab/regression/: README.md  hotelreservation-guided.yaml  mediamicroservices-guided.yaml  ob-guided.yaml  otel-demo-guided.yaml  socialnetwork-guided.yaml  sockshop-guided.yaml  sso_smoke.py  teastore-guided.yaml
aegislab/scripts/: LEGACY.md  chaos-catalog-reconcile.sh  clean-data.sh  migrate-chaos-metadata-import.sh  publish.sh
aegislab/scripts/command/: main.py  pyproject.toml  settings.toml
aegislab/scripts/command/src/: chaos.py  etcd.py  util.py
aegislab/scripts/command/src/cli/: backup.py  datapack.py  etcd.py  formatter.py  main.py  port_manager.py  rcabench_.py  sdk.py  test.py
aegislab/scripts/command/src/common/: command.py  helm_cli.py  kubernetes_manager.py
aegislab/scripts/command/src/formatter/: __init__.py
aegislab/scripts/command/src/swagger/: __init__.py  common.py  init.py  python.py  typescript.py
aegislab/scripts/command/test/: conftest.py  test_workflow.json  test_workflow.py
aegislab/sdk/: LEGACY.md
aegislab/sdk/python/: pyproject.toml
aegislab/sdk/python/src/rcabench/: __init__.py
aegislab/sdk/python/src/rcabench/client/: __init__.py  base.py  http_client.py
aegislab/src/: .gitignore  Dockerfile  Dockerfile.e2e  config.dev.toml  entrypoint.sh  go.mod  go.sum  main.go
chaos-experiment/: go.mod  go.sum
chaos-experiment/handler/: action_space.go  consts.go  dns_chaos.go  endpoint_provider.go  endpoint_provider_test.go  groundtruth.go  groundtruth_test.go  handler.go  handler_test.json  http_chaos.go  jvm_chaos.go  jvm_runtime_mutator.go  model.go  network_chaos.go  pod_chaos.go  registration.go  registration_test.go  stress_chaos.go  time_chaos.go
chaos-experiment/utils/: slice.go
docs/: cross-repo-feature-linkage.md  inject-loop-design-zh.md
experiments/: .gitignore  PAUSED.md  _retry_failed.json  _retry_otel_r4.json  _tt_http_probe.json
rcabench-platform/: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  justfile  pyproject.toml
regression-e2e/: SKILL.md
scripts/: _phase1_transform.py  _phase2_resolve_stale_paths.py  release.sh  validate_workspace_index.py  verify-issue-239-ac-1.sh  verify-issue-239-ac-2.sh  verify-issue-239-ac-4.sh  verify-issue-239-ac-5.sh  verify-issue-248-ac-1.sh  verify-issue-248-ac-2.sh  verify-issue-248-ac-5.sh
(+4687 files in other folders)
