[project]
name = "command"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.2.13",
    "kubernetes>=35.0.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
    "toml>=0.10.2",
    "tomlkit>=0.14.0",
    "typer>=0.25.1",
    "uv>=0.11.8",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.49",
    "jinja2>=3.1.6",
    "pymysql>=1.1.3",
    "python-on-whales>=0.81.0",
    "redis>=7.4.0",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "tomlkit>=0.14.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-order>=1.4.0",
    "rcabench",
]

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401", "E501"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["test"]
pythonpath = ["."]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = ["k8s: marks tests requiring Kubernetes cluster"]

[tool.uv.sources]
rcabench = { path = "../../sdk/python", editable = true }
