[project]
name = "command"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.3.2",
    "kubernetes>=36.0.2",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
    "toml>=0.10.2",
    "tomlkit>=0.15.0",
    "typer>=0.26.8",
    "uv>=0.11.26",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.50",
    "jinja2>=3.1.6",
    "pymysql>=1.2.0",
    "python-on-whales>=0.81.0",
    "redis>=8.0.1",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "tomlkit>=0.15.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-order>=1.5.0",
    "rcabench",
]

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401", "E501"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["test"]
pythonpath = ["."]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = ["k8s: marks tests requiring Kubernetes cluster"]

[tool.uv.sources]
rcabench = { path = "../../sdk/python", editable = true }
