[project]
name = "rcabench"
version = "0.0.0"
description = "RCABench - A comprehensive root cause analysis benchmarking platform for microservices"
authors = [
    { name = "Lincyaw", email = "814750204@qq.com" },
    { name = "rainystevn1", email = "rainystevn1@gmail.com" },
    { name = "YifanYang6", email = "yifanyang6@link.cuhk.edu.cn" },
]
license = "Apache-2.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "urllib3>=2.2.3, < 3.0.0",
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.12.2",
    "pydantic>=2.13.4",
    "tqdm>=4.67.1",
    "sseclient-py>=1.8.0",
]

[project.urls]
Repository = "https://github.com/OperationsPAI/aegislab"
Pypi = "https://pypi.org/project/rcabench/"

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["E501", "UP031"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
]